Fix links and UI on mobile devices

--- a/client/main.less
+++ b/client/main.less
@@ -30,23 +30,21 @@
     .game-link-container {
       a {
         text-decoration: none;
-        color: inherit;
+        color: #3C6BFA;
         i {
-          position: relative;
-          right: -90%;
-          color: #3C6BFA;
           font-size: 3rem;
-          span {
-            font-size: 0.8rem;
-            position: relative;
-            right: 7.5rem;
-          }
+        }
+        span {
+          font-size: 0.8rem;
         }
       }
     }
   }
   p {
     font-size: 1.3rem;
+
+      @media only screen and (max-width: 600px) { font-size: 1.7rem; }
+
     text-align: center;
     &.result-normal-price {
       text-decoration: line-through;
